--- a/package.json
+++ b/package.json
@@ -10,9 +10,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
+    "body-parser": "^1.18.2",
+    "connect-mongo": "^2.0.1",
+    "dot": "^1.1.2",
+    "dotenv": "^5.0.1",
     "ejs": "^2.5.7",
+    "env": "0.0.2",
     "express": "^4.16.2",
-    "livereload": "^0.7.0"
+    "express-promise-router": "^3.0.1",
+    "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.2.0",
+    "knew": "0.0.0",
+    "knex": "^0.14.4",
+    "livereload": "^0.7.0",
+    "mongoose": "^5.0.8",
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "pg-promise": "^8.1.1",
+    "sequelize": "^4.35.2"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^4.4.2",
