--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.2",
     "express-promise-router": "^3.0.1",
     "express-session": "^1.15.6",
+    "extract-text-webpack-plugin": "^3.0.2",
     "jsonwebtoken": "^8.2.0",
     "knew": "0.0.0",
     "knex": "^0.14.4",
@@ -35,9 +36,13 @@
     "sequelize": "^4.35.2"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.4.2",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
     "html-loader": "^0.5.5",
     "raw-loader": "^0.5.1",
+    "style-loader": "^0.20.3",
     "webpack": "^4.0.1"
   }
 }
