--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "express": "^4.16.2",
     "express-promise-router": "^3.0.1",
     "express-session": "^1.15.6",
-    "extract-text-webpack-plugin": "^3.0.2",
     "jsonwebtoken": "^8.2.0",
     "knew": "0.0.0",
     "knex": "^0.14.4",
@@ -40,9 +39,14 @@
     "copy-webpack-plugin": "^4.4.2",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
+    "node-sass": "^4.8.3",
     "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
-    "webpack": "^4.0.1"
+    "url-loader": "^1.0.1",
+    "webpack": "^4.2.0"
   }
 }
